# JABI

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: build_wheels.yml
clients/cpp/: CMakeLists.txt  jabi.h
clients/cpp/libjabi/: device.h
clients/cpp/libjabi/interfaces/: uart.cpp  uart.h  usb.cpp  usb.h
clients/cpp/libjabi/peripherals/: adc.cpp  can.cpp  dac.cpp  i2c.cpp  metadata.cpp  pwm.cpp  spi.cpp
clients/grpc-server/: CMakeLists.txt  main.cpp  server.cpp  server.h
clients/jabi-rs/: Cargo.toml
clients/jabi-rs/src/: device.rs  error.rs  interfaces.rs  lib.rs
clients/jabi-rs/src/interfaces/: uart.rs
clients/jabi-rs/src/peripherals/: adc.rs  can.rs  gpio.rs  lin.rs  metadata.rs  pwm.rs  spi.rs
clients/libjabi/: CMakeLists.txt  byteorder.h  device.h
clients/libjabi/interfaces/: interface.h  uart.cpp  uart.h  usb.cpp  usb.h
clients/libjabi/peripherals/: adc.cpp  can.cpp  dac.cpp  gpio.cpp  i2c.cpp  lin.cpp  metadata.cpp  pwm.cpp  spi.cpp  uart.cpp
clients/pyjabi/: CMakeLists.txt  jabi.cpp  setup.py
clients/python/: MANIFEST.in  jabi.cpp  pyproject.toml  setup.py
clients/rust/: Cargo.toml
clients/rust/src/interfaces/: usb.rs
clients/rust/src/peripherals/: can.rs  dac.rs  i2c.rs  uart.rs
examples/cpp/: CMakeLists.txt  main.cpp
examples/grpc-client/: CMakeLists.txt  client.cpp  client.h  main.cpp
examples/jabi-rs/: Cargo.toml
examples/jabi-rs/src/: main.rs
examples/libjabi/: main.cpp
examples/pyjabi/: UDSonLIN.py  main.py  usb_pdmon.py
examples/python/: main.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
firmware/: CMakeLists.txt  Kconfig  prj.conf  zephyr.patch
firmware/boards/: efm32wg.conf  efm32wg.overlay  jabican_usb_pro.conf  jabican_usb_pro.overlay  k66f_breakout.conf  k66f_breakout.overlay  leveler.conf  leveler.overlay  lpc845_lin.conf  lpc845_lin.overlay  nogusb.conf  nogusb.overlay  usb_pdmon.conf  usb_pdmon.overlay
firmware/dts/bindings/: jabi,adc.yaml  jabi,dac.yaml  jabi,interfaces.yaml  jabi,peripherals.yaml  vendor-prefixes.txt
firmware/inc/: interfaces.h  jabi.h  peripherals.h
firmware/inc/interfaces/: common.h
firmware/inc/peripherals/: metadata.h
firmware/src/: main.c
firmware/src/interfaces/: common.c  uart.c  usb.c
firmware/src/peripherals/: adc.c  can.c  common.c  dac.c  gpio.c  i2c.c  lin.c  metadata.c  pwm.c  spi.c  uart.c
include/jabi/: error.h  interfaces.h  peripherals.h
include/jabi/peripherals/: adc.h  can.h  dac.h  gpio.h  i2c.h  lin.h  metadata.h  pwm.h  spi.h  uart.h
include/protos/: CMakeLists.txt  jabi.proto
tests/grpc-client/: CMakeLists.txt  client.cpp  client.h  main.cpp
tests/libjabi/: CMakeLists.txt  Makefile  main.cpp
tests/pyjabi/: main.py
