[package]
name = "jabi"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust library for JABI (Just Another Bridge Interface)"
repository = "https://github.com/dragonlock2/JABI"
readme = "../../README.md"

# 'cargo publish' to update

[dependencies]
serial = "0.4"
deku = "0.16"
rusb = "0.9"
